# LN_MysteryRogueSystem

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.ps1  format_data.py  game.rmmzproject  index.html  jest.config.js  mkdocs.yml  package-lock.json  package.json  plugin-description.txt  plugin-package.json  pyproject.toml  tsconfig.json  versions.json  webpack.config.js  webpack.config.release.js
.githooks/: pre-commit
@types/: index.d.ts  rmmz.ts  rmmz_core.d.ts  rmmz_core_generated.d.ts  rmmz_data.ts  rmmz_managers.d.ts  rmmz_objects.d.ts  rmmz_scenes.d.ts  rmmz_sprites.d.ts  rmmz_sprites_generated.d.ts  rmmz_windows.d.ts  rmmz_windows_generated.d.ts
_charagen/: hk-mz-1.aseprite  hk-mz-2.aseprite  hk-mz-3.aseprite
data/: Actors.json  Animations.json  Armors.json  Classes.json  CommonEvents.json  Enemies.json  Items.json  Map001.json  Map002.json  Map003.json  Map004.json  Map005.json  Map007.json  Map008.json  Map009.json  Map010.json  Map011.json  Map012.json  Map013.json  Map015.json  Map017.json  Map018.json  Map019.json  Map020.json  Map021.json  Map022.json  Map023.json  Map024.json  Map025.json  Map026.json  Map028.json  Map029.json  Map030.json  Map032.json  Map033.json  Map034.json  Map035.json  Map036.json  Map037.json  Map038.json  (+75 more)
docs/: Architecture.md  Behavior実装FAQ.md  Building.md  Development.md  Grid-24x24.psd  MR-InternalArchitecture.xlsx  Note.md  TestProject.md  Translation.md  検証Note.md
js/: plugins.js
latest/: 404.html  index.html  sitemap.xml
mkdocs/: index.md
rogue/: jest.config.js  package-lock.json  plugin-description.txt  (+2 more)
(+2074 files in other folders)
