[tool.poetry]
name = "LN_MysteryRogueSystemDev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.3"
pymdown-extensions = "^9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

